fixed overflowing, fixed some responsive styles

--- a/src/styles/AboutStyles.module.css
+++ b/src/styles/AboutStyles.module.css
@@ -8,10 +8,12 @@
   flex-wrap: wrap;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
+  padding: 20px;
 }
 
+.contact_info_wrapper {}
+
 .left_inner_wrapper {
-  min-width: 666px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -32,7 +34,8 @@
   padding-bottom: 0.4rem;
 }
 .about_text {
-  width: 50%;
+  width: 90%;
+  text-align: justify;
 }
 .ul {
   display: flex;
@@ -41,22 +44,29 @@
   flex-direction: column;
   margin: 0px;
   padding: 0px;
-  width: 666px;
+
 }
 .li {
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 .image {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  max-width: 300px;
+  margin-bottom: 2rem;
+  border-radius: 3px;
 }
+
 .h2 {
   margin: 0.75rem;
+  font-size: 1.5rem;
 }
 .h1 {
-  margin-top: 3rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  font-size: 2rem;
+  text-shadow: 1px 1px 3px #03030391;
 }
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 350.98px) {
@@ -87,11 +97,23 @@
   }
 }
 
-/* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) and (max-width: 991.98px) { }
 
-/* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) and (max-width: 1199.98px) {  }
+@media (min-width: 576px) {
+  .image {
+    max-width: 400px;
+  }
+
+  .li {
+    padding: 5px;
+  }
+ }
+
+
+@media (min-width: 768px) {
+    .image {
+      max-width: 450px;
+    }
+  }
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {  }
